@@ -1,7 +1,6 @@
 * termcap.h or similar (for -Wall): which one?!
 * clean up code for -Wall (fn_select - zzzz)
 * handle 8 bit keys
-* direct commands (site, etc.)
 * problems with listing of ftp://ftp.unicode.org/ and 128.223.95.87
 	(file names short)
 * <local> mode
